--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -19,10 +19,10 @@ permissions:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        r-version: [ '4.3']
+        r-version: [ '4.4']
 
     steps:
       - uses: actions/checkout@v4
